--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,8 @@
     "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
     "com.unity.inputsystem": "1.0.2",
+    "com.unity.memoryprofiler": "0.2.9-preview.1",
+    "com.unity.performance.profile-analyzer": "1.0.3",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.3.4",
